k8s/apps/authelia/manifests/middleware.yaml
# Traefik Middleware for Authelia ForwardAuth
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia
  namespace: authelia
spec:
  forwardAuth:
    address: http://authelia.authelia.svc.cluster.local/api/verify?rd=https://auth.k8s.k8s.vicio.ovh  # UPDATE THIS
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
