k8s/apps/authelia/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.k8s.k8s.vicio.ovh`)  # UPDATE THIS
      kind: Rule
      services:
        - name: authelia
          port: 80
  tls:
    certResolver: default
    domains:
      - main: auth.k8s.k8s.vicio.ovh  # UPDATE THIS
